# BSc_Thesis--Design-of-a-FastFlow-Node-for-Hardware-Accelerators-Integration

./: .clang-format  .gitignore  CMakeLists.txt  Measurements.csv  Metrics commands.txt  README.md  run_benchmarks.sh
General/: General.txt  Problemi.txt  Struttura Tesi.txt  Tesi - BIBLIOGRAFIA.docx  Tesi - CAPITOLO 2.docx  Tesi - CAPITOLO 3.docx  Tesi - CAPITOLO 4.docx  Tesi - CAPITOLO 5.docx  Tesi - CAPITOLO 6.docx
doc/UML/: Class diagram.uml  Sequence diagram - Accelerator.uml  Sequence diagram - Cpu.uml
measurement/: Measurements.csv
src/: main.cpp
src/accelerator/: IAccelerator.hpp  ff_node_acc_t.cpp
src/common/: ComputeResult.hpp  IDeviceRunner.hpp  PerformanceData.hpp  StatsCollector.hpp  Task.hpp  device_types.h
src/cpu_runner/: Cpu_FF_Runner.cpp
src/factory/: DeviceRunner_Factory.cpp  DeviceRunner_Factory.hpp
src/ff_Pipe_nodes/: Emitter.hpp  ff_node_acc_t.cpp  ff_node_acc_t.hpp
src/helpers/: Helpers.cpp  Helpers.hpp
src/strategy_accelerator/: AcceleratorPipelineRunner.cpp  AcceleratorPipelineRunner.hpp
src/strategy_accelerator/accelerator/: BufferManager.cpp  BufferManager.hpp  Fpga_Accelerator.cpp  Fpga_Accelerator.hpp  Gpu_Metal_Accelerator.hpp  Gpu_Metal_Accelerator.mm  Gpu_OpenCL_Accelerator.cpp  Gpu_OpenCL_Accelerator.hpp  IAccelerator.hpp
src/strategy_cpu/: AbstractCpuRunner.hpp  Cpu_FF_Runner.cpp  Cpu_FF_Runner.hpp  Cpu_OMP_Runner.cpp  Cpu_OMP_Runner.hpp
